fix(base): scrollbar

--- a/app/style/base.scss
+++ b/app/style/base.scss
@@ -14,10 +14,6 @@
     &:focus {
         outline: 0;
     }
-
-    &::-webkit-scrollbar {
-        display: none;
-    }
 }
 
 ::-webkit-scrollbar {
